[package]
name = "bevy_ecs_markers"
version = "1.0.2"
edition = "2021"
authors = ["DasLixou"]
description = "🏷️ Markers for Bevy ECS Entities"
repository = "https://github.com/ChoppedStudio/bevy_ecs_markers"
keywords = ["bevy"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["examples"]

[dependencies]
bevy_ecs = "0.9.1"
bevy_ecs_markers_macros = { path = "macros", version = "1.0.2", optional = true }
bevy = { version = "0.9.1", optional = true }

[features]
default = ["proc"]
proc = ["dep:bevy_ecs_markers_macros"]
full_bevy = ["dep:bevy"]
