[package]
name = "bevy_ecs_markers"
version = "1.0.4"
edition = "2021"
authors = ["DasLixou"]
description = "🏷️ Markers for Bevy ECS Entities"
repository = "https://github.com/ChoppedStudio/bevy_ecs_markers"
keywords = ["bevy"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["examples"]

[dependencies]
bevy_ecs = { git = "https://github.com/bevyengine/bevy", rev = "f8e4b75" }
bevy_ecs_markers_macros = { path = "macros", version = "1.0.4", optional = true }
bevy = { git = "https://github.com/bevyengine/bevy", rev = "f8e4b75", optional = true }

[features]
default = ["proc"]
proc = ["dep:bevy_ecs_markers_macros"]
full_bevy = ["dep:bevy"]
