[package]
name = "bevy_ecs_markers_macros"
version = "1.0.4"
edition = "2021"
authors = ["DasLixou"]
description = "Proc Macros for Bevy ECS Markers"
repository = "https://github.com/ChoppedStudio/bevy_ecs_markers"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
bevy_macro_utils = "0.9.1"
